--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,9 @@ html, body {
   width: 100%;
   max-width: 100vw;
   overflow-x: hidden;
+  text-decoration: none;
+  color: inherit;
 }
-
 .login-body {
   --color: rgba(114, 114, 114, 0.3);
   background-image: url(../assets/Animated\ Shape.svg);
@@ -123,14 +124,16 @@ html, body {
     }
   /* Login termina aqui */
   /* Main */
-  /* --- MAIN PAGE STYLES ONLY --- */
 .body-main {
   background: #f5f7fa;
   color: #232946;
   margin: 0;
   font-family: 'Montserrat', Arial, sans-serif;
 }
-
+.body-main a {
+  color: inherit;
+  text-decoration: none;
+}
 .header {
   background: #232946;
   color: #fff;
@@ -177,6 +180,7 @@ html, body {
   display: flex;
   align-items: center;
   cursor: pointer;
+  text-decoration: none;
 }
 .nueva-solicitud-btn i {
   margin-right: 0.5em;
@@ -185,7 +189,6 @@ html, body {
   background: #232946;
   color: #ffd600;
 }
-
 .header, .navbar {
   background: #232946;
   color: #fff;
@@ -928,7 +931,7 @@ html, body {
 .dropdown-toggle {
   background: #232946;
   color: #fff;
-  border: none;
+  border: #2745d6 2px solid;
   border-radius: 8px;
   padding: 0.6rem 1.2rem;
   font-weight: 600;
